<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhoneTest</string>
    <string name="test_report">Test Report</string>
    <string name="test_config">Test Configuration</string>
    <string name="para_config">Parameter Configuration</string>
    <string name="about_msg">This is phone testing tool including production line mode and engineering mode.</string>
    <string name="good">Good</string>
    <string name="ng">NG</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="orange">Orange</string>
    <string name="test_good">Test Good</string>
    <string name="test_ng">Test NG</string>
    <string name="test_none">No Test</string>
    <string name="lcd">LCD</string>
    <string name="tp">Touch Panel</string>
    <string name="backlight">Backlight</string>
    <string name="brighten">Brighten</string>
    <string name="darken">Darken</string>
    <string name="vibrator">Vibrator</string>
    <string name="vibrator_moment">Vibrate a moment</string>
    <string name="saradc">SAR-ADC</string>
    <string name="BVM">Battery Voltage Measurement</string>
    <string name="BVM_level">Level</string>
    <string name="BVM_voltage">Voltage (mV)</string>
    <string name="BCCM">Battery Charging Measurement</string>
    <string name="BCCM_status">Charging Status</string>
    <string name="BCCM_description">Please plug/unplug the charger!</string>
    <string name="BCCM_charging">Charging!</string>
    <string name="BCCM_not_charging">Not Charging!</string>
    <string name="BCCM_discharging">Discharging!</string>
    <string name="BCCM_battery_status_full">Battery is Full!</string>
    <string name="speaker">Speaker</string>
    <string name="speaker_description">Do you hear the sound from speaker?</string>
    <string name="speaker_listen_again">Listen again?</string>
    <string name="headphone">Headphone</string>
    <string name="video">Video</string>
    <string name="headphone_description">Do you hear the sound from headphone?</string>
    <string name="keypad">Keypad</string>
    <string name="terminate_keypad_toast">Press BACK key for extra three times to terminate keypad test.</string>
    <string name="mute">Mute</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="proximitysensor">Proximity Sensor</string>
    <string name="model">Model</string>
    <string name="accuracy">Accuracy</string>
    <string name="sensor">Sensor</string>
    <string name="timestamp">Time Stamp</string>
    <string name="values">Values</string>
    <string name="lightsensor">Light Sensor</string>
    <string name="others">Others</string>
    <string name="device_not_found">Device not found</string>
    <string name="accelerometersensor">Accelerometer Sensor</string>
    <string name="magneticsensor">Magnetic Sensor</string>
    <string name="orientationsensor">Orientation Sensor</string>
    <string name="mmitest_mode">MMI Test Mode</string>
    <string name="mmitest_production_line_mode">Production Line Test Mode</string>
    <string name="mmitest_production_line_mode_summary">Test one by one automatically</string>
    <string name="mmitest_engineering_mode">Engineering Test Mode</string>
    <string name="mmitest_engineering_mode_summary">Test individual item</string>
    <string name="mmitest_report">Test Report</string>
    <string name="mmiclear_report">Clear Report</string>
    <string name="mmitest_report_summary">Show test report</string>
    <string name="mmiclear_report_summary">Clear test report</string>
    <string name="Check_version">Version</string>
    <string name="DeviceInfo_summary">Check H/W and S/W versions</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_comment">"Before test, please make sure
Bluetooth has turned on."</string>
    <string name="scan">Scan</string>
    <string name="scan_result">Scan result</string>
    <string name="turn_on_device_first">Please turn on the device first.</string>
    <string name="wifi">WiFi</string>
    <string name="wifi_comment">"Before test, please make sure
WiFi has turned on."</string>
    <string name="switch_off_airplane_mode">Before test, please switch airplane mode off.</string>
    <string name="record">Recording</string>
    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="stop">Stop</string>
    <string name="receiver">Receiver</string>
    <string name="record_first">Please record voice firstly.</string>
    <string name="insert_headset">Please insert Headset first</string>
    <string name="insert_headphone">Please insert Headphone first</string>
    <string name="sd_card_not_ready">SD Card is not ready</string>
    <string name="report_elapsed_time">Elapsed Time(s)</string>
    <string name="earpiece_error">Please plug in wired earpiece first.</string>
    <string name="opening">Please wait while opening…</string>
    <string name="closing">Please wait while closing…</string>
    <string name="scaning">Please wait while scaning…</string>
    <string name="antenna_non_signaling_mode_tx">Non-Signaling Mode Tx</string>
    <string name="antenna_gsm850">GSM850, CH190, 33dBm</string>
    <string name="antenna_gsm900">GSM900, CH38, 33dBm</string>
    <string name="antenna_gsm1800">GSM1800, CH698, 30dBm</string>
    <string name="antenna_gsm1900">GSM1900, CH661, 30dBm</string>
    <string name="insert_sd_card">Please insert SD Card.</string>
    <string name="gps">GPS</string>
    <string name="gps_comment">"Before test, please make sure
GPS has turned on."</string>
    <string name="clear">Clear</string>
    <string name="lat">Latiude</string>
    <string name="lon">Longitude</string>
    <string name="sat">Satellite(s)</string>
    <string name="utc">UTC</string>
    <string name="ffix">Time to First Fix</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="sdcard">SD Card</string>
    <string name="no_sdcard">Please insert a SD card!</string>
    <string name="test_string">"It's test string."</string>
    <string name="write_sdcard">Write file on SD Card</string>
    <string name="read_sdcard">Read file from SD Card</string>
    <string name="flashlight">Flashlight</string>
    <string name="no_flashlight_detected">No Flash Light detected.</string>
    <string name="Device_Info">Device Information</string>
    <string name="Test_config">Test Configuration</string>
    <string name="Testconfig_summary">Configue testing items</string>
    <string name="model_number">Model number</string>
    <string name="cpu_type">CPU type</string>
    <string name="device_info_default">Unknow</string>
    <string name="bsp_version">BSP version</string>
    <string name="firmware_version">Android version</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="battery_level">Battery Level</string>
    <string name="wifi_mac">Wi-Fi MAC address</string>
    <string name="bt_mac">Bluetooth MAC address</string>
    <string name="clear_report_Toast">Results Cleared!</string>
    <string name="clear_dialog_title">Clear Report</string>
    <string name="clear_dialog_message">Are you sure?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="app_quit">Quit</string>
    <string name="quit_toast">Press BACK again to exit.</string>
    <string name="no_lightsensor">No light sensor found.</string>
    <string name="no_proximitysensor">No proximity sensor found.</string>
    <string name="result_cleared">Test results have been cleared before.</string>
    <string name="front_cam">Front Camera</string>
    <string name="rear_cam">Rear Camera</string>
    <string name="engineering_toast">Need to add this item to configuration list before test.</string>
    <string name="config_save">Save</string>
    <string name="config_select_all">Select All</string>
    <string name="config_select_none">Select None</string>
    <string name="save_progressdialog_title">Saving...</string>
    <string name="clear_progressdialog_title">Cleaning...</string>
    <string name="save_progressdialog_msg">Please wait...</string>
    <string name="save_toast">Configuration Saved!</string>
    <string name="save_fail">Configuration list is null! Save Failed!</string>
    <string name="not_saved">You have not saved the configuration.</string>
    <string name="clear_report">Clear Results</string>
    <string name="go_config">Enter Configuration List</string>
    <string name="settings">Settings</string>
    <string name="item_parameters">Item Parameters</string>
    <string name="settings_summary">Enter S/W settings</string>
    <string name="item_parameters_summary">Set Test Item Parameters</string>
    <string name="settings_lcmtimeout_title">Backlight Control</string>
    <string name="settings_lcmtimeout_off">Use system LCD timeout setting.</string>
    <string name="settings_lcmtimeout_on">LCD alway on.</string>
    <string name="settings_configurable_title">Customize test items</string>
    <string name="settings_configurable_off">Do not allow to customize test items.</string>
    <string name="settings_configurable_on">Allow to customize test items.</string>
    <string name="settings_autolaunch_title">Auto Launch</string>
    <string name="settings_autolaunch_off">Auto-launch disabled.</string>
    <string name="settings_autolaunch_on">App auto launched when booting done.</string>
    <string name="video_play">Playback is ongoing!</string>
    <string name="video_pause">Playback paused!</string>
    <string name="video_reset">Playback reset!</string>
    <string name="video_stop">Playback stopped!</string>
    <string name="fontsize_small">Small</string>
    <string name="fontsize_medium">Medium</string>
    <string name="fontsize_large">Large</string>
    <string name="color_prompt">Please select drawing color:</string>
    <string name="font_prompt">Please select font size:</string>
    <string name="soundtype_ringtone">Ringtone</string>
    <string name="soundtype_notification">Notification</string>
    <string name="soundtype_alarm">Alarm</string>
    <string name="sound_prompt">Please select sound type:</string>
    <string name="vibmode_always">Always</string>
    <string name="vibmode_pattern">pattern</string>
    <string name="vib_prompt">Please select vibration mode:</string>
</resources>
