<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:enabled="true" android:layout="@layout/custom_settings_style" android:title="@string/settings_lcmtimeout_title" android:key="LCMTimeout" android:summaryOn="@string/settings_lcmtimeout_on" android:summaryOff="@string/settings_lcmtimeout_off" style="?android:preferenceInformationStyle" />
    <CheckBoxPreference android:enabled="true" android:layout="@layout/custom_settings_style" android:title="@string/settings_configurable_title" android:key="Configurable" android:summaryOn="@string/settings_configurable_on" android:summaryOff="@string/settings_configurable_off" style="?android:preferenceInformationStyle" />
    <CheckBoxPreference android:enabled="true" android:layout="@layout/custom_settings_style" android:title="@string/settings_autolaunch_title" android:key="Autolaunch" android:summaryOn="@string/settings_autolaunch_on" android:summaryOff="@string/settings_autolaunch_off" style="?android:preferenceInformationStyle" />
</PreferenceScreen>
