<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/Device_Info"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/model_number" android:key="device_model" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/cpu_type" android:key="cpu_type" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/bsp_version" android:key="bsp_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/firmware_version" android:key="firmware_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/battery_level" android:key="battery_level" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/wifi_mac" android:key="wifi_mac" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/bt_mac" android:key="bt_mac" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
</PreferenceScreen>
