<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="fill_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
        <TextView android:textSize="25.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="#ffff0000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/red" android:layout_weight="1.0" />
        <TextView android:textSize="25.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="#ffffff00" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/yellow" android:layout_weight="1.0" />
        <TextView android:textSize="25.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="#ff00ff00" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/green" android:layout_weight="1.0" />
        <TextView android:textSize="25.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="#ff0000ff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/blue" android:layout_weight="1.0" />
        <TextView android:textSize="25.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/black" android:layout_weight="1.0" />
        <TextView android:textSize="25.0dip" android:textColor="#ff000000" android:gravity="center" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/white" android:layout_weight="1.0" />
    </LinearLayout>
    <Button android:id="@id/button1" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/test_ng" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <Button android:id="@id/button2" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/test_good" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>
