<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BVM" />
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="2">
            <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:paddingLeft="10.0dip" android:layout_column="1" android:text="@string/BVM_level" />
                <TextView android:id="@id/field_level" android:paddingLeft="10.0dip" />
            </TableRow>
            <TableRow android:id="@id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:paddingLeft="10.0dip" android:layout_column="1" android:text="@string/BVM_voltage" />
                <TextView android:id="@id/field_voltage" android:paddingLeft="10.0dip" />
            </TableRow>
        </TableLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BCCM" />
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="2">
            <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:paddingLeft="10.0dip" android:layout_column="1" android:text="@string/BCCM_status" />
                <TextView android:id="@id/field_status" android:paddingLeft="10.0dip" />
            </TableRow>
        </TableLayout>
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold|italic" android:textColor="#ffffff00" android:id="@id/textView2" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/BCCM_description" />
    </LinearLayout>
    <Button android:id="@id/button2" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/test_ng" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <Button android:id="@id/button3" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/test_good" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>
