<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:src="@drawable/phone_proximity_light_sensor" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff000000" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/proximitysensor" android:layout_below="@id/imageView1" android:layout_centerHorizontal="true" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/textView1" android:layout_centerHorizontal="true">
        <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_gravity="left" android:paddingLeft="10.0dip" android:text="@string/model" />
            <TextView android:textColor="#ff000000" android:layout_gravity="right" android:id="@id/textView3" />
        </TableRow>
        <TableRow android:id="@id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_gravity="left" android:paddingLeft="10.0dip" android:text="@string/accuracy" />
            <TextView android:textColor="#ff000000" android:layout_gravity="right" android:id="@id/textView4" />
        </TableRow>
        <TableRow android:id="@id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_gravity="left" android:paddingLeft="10.0dip" android:text="@string/sensor" />
            <TextView android:textColor="#ff000000" android:layout_gravity="right" android:id="@id/textView5" />
        </TableRow>
        <TableRow android:id="@id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_gravity="left" android:paddingLeft="10.0dip" android:text="@string/timestamp" />
            <TextView android:textColor="#ff000000" android:layout_gravity="right" android:id="@id/textView6" />
        </TableRow>
        <TableRow android:id="@id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_gravity="left" android:paddingLeft="10.0dip" android:text="@string/values" />
            <TextView android:textColor="#ff000000" android:layout_gravity="right" android:id="@id/textView7" />
        </TableRow>
    </TableLayout>
    <Button android:id="@id/button2" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/test_ng" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <Button android:id="@id/button3" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/test_good" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>
